--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.4.0",
     "crypto-js": "^3.3.0",
     "express": "^4.17.1",
+    "module-alias": "^2.2.2",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.0",
@@ -27,5 +28,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.8.3"
+  },
+  "_moduleAliases": {
+    "@" : ".",
+    "@libs" : "libs/",
+    "@controllers" : "app/controllers",
+    "@middlewares" : "app/middlewares",
+    "@models" : "app/models",
+    "@storage" : "app/storage"
   }
 }
